syntax = "proto3";

import "DTO/trace_data.proto";

option csharp_namespace = "Proto.Notifications.Ticket";

service NotificationService {
  rpc SendTicketCreated(TicketCreatedNotification) returns (NotificationResponse);
  rpc SendTicketDataUpdated(TicketDataUpdatedNotification) returns (NotificationResponse);
  rpc SendTicketDocumentationUpdated(TicketDocumentationUpdatedNotification) returns (NotificationResponse);
}

service TicketNotificationService {
  rpc SubscribeTicketNotifications(SubscribeRequest) returns (stream TicketNotification);
}

message TicketNotification {
  oneof notification {
    TicketCreatedNotification ticketCreated = 1;
    TicketDataUpdatedNotification ticketDataUpdated = 2;
    TicketDocumentationUpdatedNotification ticketDocumentationUpdated = 3;
  }
}

message TicketCreatedNotification {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
  TraceDataProto traceData = 5;
}

message TicketDataUpdatedNotification {
  string ticketId = 1;
  string name = 2;
  string bookingNumber = 3;
  repeated string sprintIds = 4;
  TraceDataProto traceData = 5;
}

message TicketDocumentationUpdatedNotification {
  string ticketId = 1;
  string documentation = 2;
  TraceDataProto traceData = 3;
}

message NotificationResponse {
  bool success = 1;
}

message SubscribeRequest {
}
